--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.4.0"
   },
   "devDependencies": {
+    "@types/node": "^20.2.3",
     "prettier": "^2.8.8",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
