--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "fhir-client-rae",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A nice fhir client",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
     "prepare": "npm run build",
     "prepublishOnly": "npm run lint",
