--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "types": "lib/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "tslint -p tsconfig.json",
+    "format": "prettier --write \\\"../fhir-template-generator/src/**/*.ts\\\"",
+    "lint": "tslint -p ../fhir-template-generator/tsconfig.json",
     "prepare": "npm run build",
     "prepublishOnly": "npm run lint",
     "preversion": "npm run lint",
-    "version": "npm run format && git add -A src",
+    "version": "npm run format && git add -A ../fhir-template-generator/src",
     "postversion": "git push && git push --tags"
   },
   "keywords": [
