--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "fhir-client-rae",
-  "version": "1.0.19",
+  "version": "1.0.20",
   "description": "A nice fhir client",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "format": "prettier --write \\\"../api-fhir/src/**/*.ts\\\"",
+    "format": "prettier --write \\\"../api-fhir/src/*.ts\\\"",
     "lint": "tslint -p ../api-fhir/tsconfig.json",
     "prepare": "npm run build",
     "prepublishOnly": "npm run lint",
     "preversion": "npm run lint",
-    "version": "npm run format && git add -A ../fhir-template-generator/src",
+    "version": "npm run format && git add -A ../api-fhir/src",
     "postversion": "git push && git push --tags"
   },
   "keywords": [
